hot fix user storage provider